# dnabc

./: Dockerfile  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yaml  pr.yml  release.yml  test.yml
dnabclib/: assigner.py  main.py  make_index.py  sample.py  seqfile.py  split_samplelanes.py  writer.py
src/dnabc/: assigner.py  main.py  sample.py  seqfile.py  writer.py
test/: test_assigner.py  test_main.py  test_sample.py  test_seqfile.py  test_writer.py
test/data/: tiny_I1.fastq  tiny_R2.fastq
tests/: test_assigner.py  test_main.py  test_sample.py  test_seqfile.py  test_writer.py
tests/data/: med_R1.fastq  med_R2.fastq  tiny_R1.fastq
